# API_project

./: .dockerignore  .gitignore  README.md  api_movies.py  app.py  db.py  dockerfile  movies_db.py  pyproject.toml  requirements.txt  sqlite_movies_db.py
flaskr/: __init__.py  app.py  db.py  init_movies.py  mymovies_blueprint.py  schema.sql
flaskr/models/: genre.py  movie.py
flaskr/static/js/: get_movie.js
models/: genre.py  movie.py
post_requests/: post_request.py
static/css/: movie_style.css
static/js/: get_movie.js
templates/: movie_frontend.html
