[project]
name = "api-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Ludovico Bartoli",email = "ludovicobartoli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types (==0.7.0)",
    "backports-tarfile (==1.2.0)",
    "blinker (==1.9.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.7)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.17.0)",
    "flask (==3.1.0)",
    "idna (==3.10)",
    "importlib-metadata (==8.6.1)",
    "installer (==0.7.0)",
    "itsdangerous (==2.2.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jinja2 (==3.1.5)",
    "keyring (==25.6.0)",
    "markupsafe (==3.0.2)",
    "more-itertools (==10.6.0)",
    "msgpack (==1.1.0)",
    "pipenv (==2024.4.1)",
    "pkginfo (==1.12.0)",
    "platformdirs (==4.3.6)",
    "pydantic (==2.10.6)",
    "pydantic-core (==2.27.2)",
    "pyproject-hooks (==1.2.0)",
    "pywin32-ctypes (==0.2.3)",
    "rapidfuzz (==3.12.1)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "shellingham (==1.5.4)",
    "tomli (==2.2.1)",
    "tomlkit (==0.13.2)",
    "trove-classifiers (==2025.1.15.22)",
    "typing-extensions (==4.12.2)",
    "urllib3 (==2.3.0)",
    "virtualenv (==20.29.1)",
    "werkzeug (==3.1.3)",
    "zipp (==3.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
