[project]
name = "mymovies"
version = "0.1.0"
description = ""
authors = [
    {name = "Ludovico Bartoli",email = "ludovicobartoli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
# Include only the main package directory
packages = [{include = "mymovies"}]
exclude = ["requests_scripts", "trash", "tutorials"]

[tool.poetry.dependencies]
flask = "^3.1.0"
pydantic = "^2.10.6"
